fix(timelines-v2): hide center line on mobile

--- a/blocks/timelines-v2/timelines-v2.scss
+++ b/blocks/timelines-v2/timelines-v2.scss
@@ -192,7 +192,14 @@
       }
     }
 
-    @media (max-width: 575px) {
+  }
+
+  @media (max-width: 575px) {
+    &::before {
+      display: none;
+    }
+
+    .timeline {
       .timeline-item {
         padding-top: 20px;
 
